typst brand yaml: font colors

--- a/tests/docs/smoke-all/typst/brand-yaml/typography/google2/_brand.yml
+++ b/tests/docs/smoke-all/typst/brand-yaml/typography/google2/_brand.yml
@@ -31,3 +31,6 @@ typography:
     family: "Inconsolata"
   monospace-inline:
     weight: 600
+    color: rgb(8, 111, 15)
+  monospace-block:
+    color: firebrick
