--- a/tests/docs/smoke-all/typst/brand-yaml/typography/google2/_brand.yml
+++ b/tests/docs/smoke-all/typst/brand-yaml/typography/google2/_brand.yml
@@ -10,27 +10,29 @@ color:
 typography:
   fonts:
     - source: google
-      family: "Baskerville"
+      family: Baskerville
       weight: [200, 400]
       style: [normal, italic]
     - source: google
-      family: "Montserrat"
+      family: Montserrat
       weight: [400, 700, 900]
       style: [normal, italic]
     - source: google
-      family: "Inconsolata"
+      family: Inconsolata
       weight: [400, 600]
   base:
-    family: "Baskerville"
+    family: Baskerville
     style: italic
     weight: 200
   headings:
-    family: "Montserrat"
+    family: Montserrat
     weight: 900
   monospace:
-    family: "Inconsolata"
+    family: Inconsolata
   monospace-inline:
     weight: 600
     color: rgb(8, 111, 15)
+    background-color: rgb(255, 250, 224)
   monospace-block:
     color: firebrick
+    background-color: "#110750"
